--- a/tests/lkft/ltp/skipfile-lkft.yaml
+++ b/tests/lkft/ltp/skipfile-lkft.yaml
@@ -53,3 +53,136 @@ skiplist:
       - nfslock3
       - ssh4-stress
       - ssh6-stress
+
+  - reason: >
+      those tests can not run on arm/arm64 architect
+    url:
+    environments: production
+    boards:
+      - mt.jade
+    branches:
+      - all
+    tests:
+      - cve-2015-3290
+      - cve-2017-15537
+      - cve-2017-5754
+      - cve-2017-17053
+      - cve-2018-8897
+      - cve-2018-1000199
+      - umip_basic_test
+      - mmapstress08
+      - ptrace07
+      - ptrace08
+      - ptrace09
+      - ptrace10
+      - sbrk03
+      - signal06
+      - pt_full_trace_basic
+      - pt_snapshot_trace_basic
+      - pt_ex_user
+      - pt_ex_kernel
+      - pt_disable_branch
+      - ioperm01
+      - ioperm02
+      - iopl01
+      - iopl02
+
+  - reason: >
+      those tests can not run on 64bit system
+    url:
+    environments: production
+    boards:
+      - mt.jade
+    branches:
+      - all
+    tests:
+      - setgroups01_16
+      - setgroups02_16
+      - setgroups03_16
+      - setgroups04_16
+      - setregid01_16
+      - setregid02_16
+      - setregid03_16
+      - setregid04_16
+      - setresgid01_16
+      - setresgid02_16
+      - setresgid03_16
+      - setresgid04_16
+      - setresuid01_16
+      - setresuid02_16
+      - setresuid03_16
+      - setresuid04_16
+      - setresuid05_16
+      - setreuid01_16
+      - setreuid02_16
+      - setreuid03_16
+      - setreuid04_16
+      - setreuid05_16
+      - setreuid06_16
+      - setreuid07_16
+      - setuid01_16
+      - setuid03_16
+      - setuid04_16
+      - setfsgid01_16
+      - setfsgid02_16
+      - setfsgid03_16
+      - setfsuid01_16
+      - setfsuid02_16
+      - setfsuid03_16
+      - setfsuid04_16
+      - setgid01_16
+      - setgid02_16
+      - setgid03_16
+      - lchown01_16
+      - lchown02_16
+      - lchown03_16
+      - getegid01_16
+      - getegid02_16
+      - geteuid01_16
+      - geteuid02_16
+      - getgid01_16
+      - getgid03_16
+      - getgroups01_16
+      - getgroups03_16
+      - getresgid01_16
+      - getresgid02_16
+      - getresgid03_16
+      - getresuid01_16
+      - getresuid02_16
+      - getresuid03_16
+      - getuid01_16
+      - getuid03_16
+      - fchown01_16
+      - fchown02_16
+      - fchown03_16
+      - fchown04_16
+      - fchown05_16
+      - chown01_16
+      - chown02_16
+      - chown03_16
+      - chown04_16
+      - chown05_16
+
+  - reason: >
+      Could not find any usable SCSI device
+    url:
+    environments: production
+    boards:
+      - mt.jade
+    branches:
+      - all
+    tests:
+      - cve-2018-1000204
+      - ioctl_sg01
+
+  - reason: >
+      Could not find any cd media or floppy disk
+    url:
+    environments: production
+    boards:
+      - mt.jade
+    branches:
+      - all
+    tests:
+      - stress_cd
+      - stress_floppy
