ltp: skip Filecaps to avoid test hung
Signed-off-by: Bobo <lmw.bobo@gmail.com>

--- a/tests/lkft/ltp/skipfile-lkft.yaml
+++ b/tests/lkft/ltp/skipfile-lkft.yaml
@@ -53,6 +53,7 @@ skiplist:
       - nfslock3
       - ssh4-stress
       - ssh6-stress
+      - Filecaps
 
   - reason: >
       those tests can not run on arm/arm64 architect
