enable /proc/config.gz for ltp tests
Signed-off-by: Bobo <lmw.bobo@gmail.com>

--- a/arch/arm64/configs/altra_5.10_defconfig
+++ b/arch/arm64/configs/altra_5.10_defconfig
@@ -10,7 +10,7 @@ CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_IKCONFIG=m
+CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_IKHEADERS=m
 CONFIG_LOG_BUF_SHIFT=20
